fix control linuxdeepin to deepin
Change-Id: Ic663f6503cbc45d0fac5236cf324f73525a75d04

--- a/compiz/debian/control
+++ b/compiz/debian/control
@@ -1,7 +1,7 @@
 Source: compiz
 Section: x11
 Priority: optional
-Maintainer: Deepin Sysdev <sysdev@linuxdeepin.com>
+Maintainer: Deepin Sysdev <sysdev@deepin.com>
 Build-Depends: cmake (>= 2.6),
                debhelper (>= 9~),
                intltool,
