--- a/deepin-music/debian/control
+++ b/deepin-music/debian/control
@@ -1,10 +1,10 @@
 Source: deepin-music
 Section: sound
 Priority: extra
-Maintainer: Deepin Sysdev <sysdev@linuxdeepin.com>
+Maintainer: Deepin Sysdev <sysdev@deepin.com>
 Build-Depends: debhelper (>= 8.0.0), python
 Standards-Version: 3.9.2
-Homepage: http://www.linuxdeepin.com/
+Homepage: http://www.deepin.com/
 
 Package: deepin-music
 Architecture: all
