--- a/deepin-ui/debian/control
+++ b/deepin-ui/debian/control
@@ -1,10 +1,10 @@
 Source: deepin-ui
 Priority: extra
-Maintainer: Deepin Sysdev <sysdev@linuxdeepin.com>
+Maintainer: Deepin Sysdev <sysdev@deepin.com>
 Build-Depends: debhelper (>= 9), dh-python, python, deepin-gettext-tools, python-setuptools
 Standards-Version: 3.9.5
 Section: libs
-Homepage: http://www.linuxdeepin.com/
+Homepage: http://www.deepin.com/
 Vcs-Git: git://github.com/manateelazycat/deepin-ui.git
 Vcs-Browser: https://github.com/manateelazycat/deepin-ui.git
 
