--- a/dde-account-faces/debian/control
+++ b/dde-account-faces/debian/control
@@ -1,7 +1,7 @@
 Source: dde-account-faces
 Section: deepin
 Priority: optional
-Maintainer: Deepin Sysdev <sysdev@linuxdeepin.com>
+Maintainer: Deepin Sysdev <sysdev@deepin.com>
 Standards-Version: 3.9.2
 Build-Depends: debhelper (>= 8),
 
