--- a/dde-calendar/debian/control
+++ b/dde-calendar/debian/control
@@ -1,7 +1,7 @@
 Source: dde-calendar
 Section: utils
 Priority: optional
-Maintainer: Deepin Packages Builder <packages@linuxdeepin.com>
+Maintainer: Deepin Packages Builder <packages@deepin.com>
 Build-Depends: debhelper (>=9), pkg-config, libdtkbase-dev,qt5-qmake, qt5-default, qtbase5-dev,libdtkwidget-dev ,qttools5-dev-tools ,libdtkutil-dev
 Standards-Version: 3.9.6
 Homepage: http://www.deepin.org
