--- a/dde-control-center/debian/control
+++ b/dde-control-center/debian/control
@@ -1,7 +1,7 @@
 Source: dde-control-center
 Section: admin
 Priority: optional
-Maintainer: Deepin Sysdev <sysdev@linuxdeepin.com>
+Maintainer: Deepin Sysdev <sysdev@deepin.com>
 Build-Depends: debhelper (>= 9),
  pkg-config,
  dpkg-dev,
