--- a/dde-desktop/debian/control
+++ b/dde-desktop/debian/control
@@ -1,7 +1,7 @@
 Source: dde-desktop
 Section: testing/deepin
 Priority: optional
-Maintainer: Deepin Sysdev <sysdev@linuxdeepin.com>
+Maintainer: Deepin Sysdev <sysdev@deepin.com>
 Build-Depends: debhelper (>= 8.0.0), pkg-config,
  qt5-qmake, qt5-default, qtbase5-dev,
  libxcb-ewmh-dev, libqt5x11extras5-dev,
