--- a/dde-dock-applets/debian/control
+++ b/dde-dock-applets/debian/control
@@ -1,7 +1,7 @@
 Source: dde-dock-applets
 Section: admin
 Priority: optional
-Maintainer: Deepin Sysdev <sysdev@linuxdeepin.com>
+Maintainer: Deepin Sysdev <sysdev@deepin.com>
 Build-Depends: debhelper (>= 9),
  pkg-config,
  libx11-dev,
