--- a/dde-dock/debian/control
+++ b/dde-dock/debian/control
@@ -1,7 +1,7 @@
 Source: dde-dock
 Section: deepin
 Priority: optional
-Maintainer: Deepin Sysdev <sysdev@linuxdeepin.com>
+Maintainer: Deepin Sysdev <sysdev@deepin.com>
 Build-Depends: debhelper (>= 8.0.0), pkg-config,
  qt5-qmake, qt5-default,
  libgtk2.0-dev,
