--- a/dde-file-manager/debian/control
+++ b/dde-file-manager/debian/control
@@ -1,7 +1,7 @@
 Source: dde-file-manager
 Section: devel
 Priority: optional
-Maintainer: Deepin Packages Builder <packages@linuxdeepin.com>
+Maintainer: Deepin Packages Builder <packages@deepin.com>
 Build-Depends: debhelper (>=9), pkg-config, qt5-qmake, qt5-default, qtbase5-dev, qtbase5-private-dev,
  libxcb-ewmh-dev, libgtk2.0-dev, libqt5x11extras5-dev, libgsettings-qt-dev, libqt5svg5-dev, 
  qttools5-dev-tools, libmagic-dev, libudev-dev, libsecret-1-dev,
