--- a/dde-help/debian/control
+++ b/dde-help/debian/control
@@ -1,7 +1,7 @@
 Source: dde-help
 Section: doc
 Priority: optional
-Maintainer: Deepin Sysdev <sysdev@linuxdeepin.com>
+Maintainer: Deepin Sysdev <sysdev@deepin.com>
 Build-Depends: debhelper (>= 8.0.0)
 Standards-Version: 3.9.4
 Homepage: http://www.deepin.org/
