--- a/dde-workspace/debian/control
+++ b/dde-workspace/debian/control
@@ -1,9 +1,9 @@
 Source: dde-workspace
 Section: testing/utils
 Priority: extra
-Maintainer: Deepin Sysdev <sysdev@linuxdeepin.com>
+Maintainer: Deepin Sysdev <sysdev@deepin.com>
 Standards-Version: 3.9.5
-Homepage: http://www.linuxdeepin.com
+Homepage: http://www.deepin.com
 Build-Depends: debhelper (>= 9),
  cmake,
  golang-dlib-dev,
