--- a/deepin-appstore/debian/control
+++ b/deepin-appstore/debian/control
@@ -1,5 +1,5 @@
 Source: deepin-appstore
-Maintainer: Deepin Sysdev <sysdev@linuxdeepin.com>
+Maintainer: Deepin Sysdev <sysdev@deepin.com>
 Section: admin
 Priority: optional
 Build-Depends:
