--- a/deepin-artwork-themes/debian/control
+++ b/deepin-artwork-themes/debian/control
@@ -1,7 +1,7 @@
 Source: deepin-artwork-themes
 Section: deepin
 Priority: optional
-Maintainer: Deepin Sysdev <sysdev@linuxdeepin.com>
+Maintainer: Deepin Sysdev <sysdev@deepin.com>
 Standards-Version: 3.9.5
 Build-Depends: debhelper (>= 8), python
 
