--- a/deepin-boot-maker/debian/control
+++ b/deepin-boot-maker/debian/control
@@ -1,10 +1,10 @@
 Source: deepin-boot-maker
 Section: misc
 Priority: extra
-Maintainer: Deepin Sysdev <sysdev@linuxdeepin.com>
+Maintainer: Deepin Sysdev <sysdev@deepin.com>
 Build-Depends: debhelper (>= 9), qt5-default, qt5-qmake, qttools5-dev-tools
 Standards-Version: 3.9.5
-Homepage: http://www.linuxdeepin.com/
+Homepage: http://www.deepin.com/
 
 Package: deepin-boot-maker
 Architecture: any
