--- a/deepin-feedback/debian/control
+++ b/deepin-feedback/debian/control
@@ -1,7 +1,7 @@
 Source: deepin-feedback
 Section: utils
 Priority: optional
-Maintainer: Deepin Sysdev <sysdev@linuxdeepin.com>
+Maintainer: Deepin Sysdev <sysdev@deepin.com>
 Build-Depends: debhelper (>= 9),
  golang,
  golang-dlib-dev,
