--- a/deepin-icon-theme/debian/control
+++ b/deepin-icon-theme/debian/control
@@ -1,7 +1,7 @@
 Source: deepin-icon-theme
 Section: x11
 Priority: optional
-Maintainer: Deepin Sysdev <sysdev@linuxdeepin.com>
+Maintainer: Deepin Sysdev <sysdev@deepin.com>
 Standards-Version: 3.9.5
 Build-Depends: debhelper (>= 9), python, inkscape
 
