--- a/deepin-internal-debug/debian/control
+++ b/deepin-internal-debug/debian/control
@@ -1,7 +1,7 @@
 Source: deepin-internal-debug
 Section: misc
 Priority: optional
-Maintainer: Deepin Sysdev <sysdev@linuxdeepin.com>
+Maintainer: Deepin Sysdev <sysdev@deepin.com>
 Build-Depends: debhelper (>= 9)
 Standards-Version: 3.9.5
 
