--- a/deepin-license/debian/control
+++ b/deepin-license/debian/control
@@ -2,7 +2,7 @@ Homepage: https://www.deepin.com
 Source: deepin-license
 Section: graphics
 Priority: optional
-Maintainer: Deepin Sysdev <sysdev@linuxdeepin.com>
+Maintainer: Deepin Sysdev <sysdev@deepin.com>
 Uploaders: Iceyer  Tsubasa <me@iceyer.net>
 Build-Depends: debhelper (>= 9.0~), dh-systemd, qt5-default, pkg-config, qttools5-dev-tools, libqt5x11extras5-dev, libssl-dev,
     libboost1.58-dev, libdtkbase-dev, libdtkutil-dev, libdtkwidget-dev, dkms, libmount-dev, linux-headers-4.2.0-1-all
