--- a/deepin-metacity/debian/control
+++ b/deepin-metacity/debian/control
@@ -1,7 +1,7 @@
 Source: deepin-metacity
 Section: x11
 Priority: optional
-Maintainer: Deepin Sysdev <sysdev@linuxdeepin.com>
+Maintainer: Deepin Sysdev <sysdev@deepin.com>
 Uploaders: Andreas Henriksson <andreas@fatal.se>, Debian GNOME Maintainers <pkg-gnome-maintainers@lists.alioth.debian.org>, Dmitry Shachnev <mitya57@debian.org>
 Build-Depends: cdbs (>= 0.4.41),
  debhelper (>= 8),
