--- a/deepin-movie/debian/control
+++ b/deepin-movie/debian/control
@@ -1,10 +1,10 @@
 Source: deepin-movie
 Section: misc
 Priority: extra
-Maintainer: Deepin Sysdev <sysdev@linuxdeepin.com>
+Maintainer: Deepin Sysdev <sysdev@deepin.com>
 Build-Depends: debhelper (>= 9), python, deepin-gettext-tools
 Standards-Version: 3.9.5
-Homepage: http://www.linuxdeepin.com
+Homepage: http://www.deepin.com
 
 Package: deepin-movie
 Architecture: all
