--- a/deepin-nautilus-properties/debian/control
+++ b/deepin-nautilus-properties/debian/control
@@ -5,7 +5,7 @@
 Source: deepin-nautilus-properties
 Section: gnome
 Priority: optional
-Maintainer: Deepin Sysdev <sysdev@linuxdeepin.com>
+Maintainer: Deepin Sysdev <sysdev@deepin.com>
 Build-Depends: debhelper (>= 8),
                dh-autoreconf,
                cdbs (>= 0.4.90),
