--- a/deepin-notifications/debian/control
+++ b/deepin-notifications/debian/control
@@ -1,11 +1,11 @@
 Source: deepin-notifications
 Section: misc
 Priority: extra
-Maintainer: Deepin Sysdev <sysdev@linuxdeepin.com>
+Maintainer: Deepin Sysdev <sysdev@deepin.com>
 Build-Depends: debhelper (>= 9), pkg-config, libgtk2.0-dev, 
  qt5-default, qtdeclarative5-dev, libqt5svg5-dev, libdtkbase-dev, libdtkwidget-dev, 
 Standards-Version: 3.9.5
-Homepage: http://www.linuxdeepin.com
+Homepage: http://www.deepin.com
 
 Package: deepin-notifications
 Architecture: any
