--- a/deepin-screenshot/debian/control
+++ b/deepin-screenshot/debian/control
@@ -1,7 +1,7 @@
 Source: deepin-screenshot
 Section: misc
 Priority: extra
-Maintainer: Deepin Sysdev <sysdev@linuxdeepin.com>
+Maintainer: Deepin Sysdev <sysdev@deepin.com>
 Build-Depends: debhelper (>= 9),
  python,
  deepin-gettext-tools
