--- a/deepin-sound-theme/debian/control
+++ b/deepin-sound-theme/debian/control
@@ -1,7 +1,7 @@
 Source: deepin-sound-theme
 Section: x11
 Priority: optional
-Maintainer: Deepin Sysdev <sysdev@linuxdeepin.com>
+Maintainer: Deepin Sysdev <sysdev@deepin.com>
 Build-Depends: debhelper (>= 9)
 Standards-Version: 3.8.3
 Homepage: http://www.deepin.org/
