--- a/deepin-translator/debian/control
+++ b/deepin-translator/debian/control
@@ -1,7 +1,7 @@
 Source: deepin-translator
 Section: education
 Priority: optional
-Maintainer: Deepin Sysdev <sysdev@linuxdeepin.com>
+Maintainer: Deepin Sysdev <sysdev@deepin.com>
 Build-Depends: debhelper (>= 9), python
 Standards-Version: 3.9.5
 
