--- a/deepin-wallpapers/debian/control
+++ b/deepin-wallpapers/debian/control
@@ -1,7 +1,7 @@
 Source: deepin-wallpapers
 Section: utils
 Priority: optional
-Maintainer: Deepin Packages Builder <packages@linuxdeepin.com>
+Maintainer: Deepin Packages Builder <packages@deepin.com>
 Build-Depends: debhelper (>=9)
 Standards-Version: 3.9.6
 Homepage: https://www.deepin.org/
