--- a/deepin-wm-switcher/debian/control
+++ b/deepin-wm-switcher/debian/control
@@ -1,10 +1,10 @@
 Source: deepin-wm-switcher
 Section: devel
 Priority: optional
-Maintainer: Deepin Sysdev <sysdev@linuxdeepin.com>
+Maintainer: Deepin Sysdev <sysdev@deepin.com>
 Build-Depends: debhelper (>= 9), cmake, clang, libx11-dev ,libx11-xcb-dev, libqt5x11extras5-dev, qtbase5-dev, libxcb-keysyms1-dev, libglib2.0-dev,
 Standards-Version: 3.9.6
-Homepage: http://www.linuxdeepin.com
+Homepage: http://www.deepin.com
 
 Package: deepin-wm-switcher
 Architecture: any
