--- a/default-gsettings/debian/control
+++ b/default-gsettings/debian/control
@@ -1,7 +1,7 @@
 Source: deepin-default-gsettings
 Section: admin
 Priority: optional
-Maintainer: Deepin Sysdev <sysdev@linuxdeepin.com>
+Maintainer: Deepin Sysdev <sysdev@deepin.com>
 Build-Depends: debhelper (>= 8.0.0)
 Standards-Version: 3.9.4
 Homepage: https://github.com/linuxdeepin/default-gsettings.git
