--- a/go-dbus-generator/debian/control
+++ b/go-dbus-generator/debian/control
@@ -1,12 +1,12 @@
 Source: go-dbus-generator
 Section: devel
 Priority: extra
-Maintainer: Deepin Sysdev <sysdev@linuxdeepin.com>
+Maintainer: Deepin Sysdev <sysdev@deepin.com>
 Build-Depends: debhelper (>= 9), golang-go,  dh-golang,
  golang-dlib-dev(>= 0.4.2), golang-gocheck-dev,
  qt5-default, qt5-qmake, qtdeclarative5-dev
 Standards-Version: 3.9.5
-Homepage: http://www.linuxdeepin.com
+Homepage: http://www.deepin.com
 
 Package: dbus-generator
 Architecture: any
