--- a/grub-themes-deepin/debian/control
+++ b/grub-themes-deepin/debian/control
@@ -1,7 +1,7 @@
 Source: grub-themes-deepin
 Section: universe/misc
 Priority: extra
-Maintainer: Deepin Sysdev <sysdev@linuxdeepin.com>
+Maintainer: Deepin Sysdev <sysdev@deepin.com>
 Build-Depends: debhelper (>= 8.0.0)
 Standards-Version: 3.9.5
 Homepage: http://www.deepin.org/
