--- a/libdui/debian/control
+++ b/libdui/debian/control
@@ -1,7 +1,7 @@
 Source: libdui
 Section: devel
 Priority: optional
-Maintainer: Deepin Sysdev <sysdev@linuxdeepin.com>
+Maintainer: Deepin Sysdev <sysdev@deepin.com>
 Build-Depends: debhelper (>= 9),qt5-default, qtdeclarative5-dev, qtmultimedia5-dev, libqt5x11extras5-dev,
 Standards-Version: 3.9.6
 
