--- a/qt5deepintheme-plugin/debian/control
+++ b/qt5deepintheme-plugin/debian/control
@@ -1,7 +1,7 @@
 Source: qt5deepintheme-plugin
 Section: devel
 Priority: optional
-Maintainer: Deepin Sysdev <sysdev@linuxdeepin.com>
+Maintainer: Deepin Sysdev <sysdev@deepin.com>
 Build-Depends: debhelper (>= 9), qt5-default, qtbase5-dev, qtbase5-private-dev,
 	pkg-config, libdde-file-manager-dev
 Standards-Version: 3.9.6
