--- a/qtav/debian/control
+++ b/qtav/debian/control
@@ -2,7 +2,7 @@
 Source: qtav
 Section: libs
 Priority: extra
-Maintainer: Deepin Sysdev <sysdev@linuxdeepin.com>
+Maintainer: Deepin Sysdev <sysdev@deepin.com>
 Build-Depends: debhelper (>= 9),
  qt5-qmake, libqt5opengl5-dev, qtdeclarative5-dev,
  libavutil-dev,
