--- a/startdde/debian/control
+++ b/startdde/debian/control
@@ -1,7 +1,7 @@
 Source: startdde
 Section: admin
 Priority: extra
-Maintainer: Deepin Sysdev <sysdev@linuxdeepin.com>
+Maintainer: Deepin Sysdev <sysdev@deepin.com>
 Build-Depends: debhelper (>= 9), pkg-config, golang-go,
  libsqlite3-dev,
  golang-dlib-dev,
