Add dde-qt-dbus-factory conf
Change-Id: I2b58eca5149cb0adca4ddb1ff57cc33de33c3e52

--- a/git-build.conf
+++ b/git-build.conf
@@ -243,3 +243,6 @@ git=https://cr.deepin.io/default-settings
 
 [qt5dxcb-plugin]
 git=https://cr.deepin.io/qt5dxcb-plugin
+
+[dde-qt-dbus-factory]
+git=https://cr.deepin.io/dde/dde-qt-dbus-factory
