--- a/deepin-terminal/debian/rules
+++ b/deepin-terminal/debian/rules
@@ -5,9 +5,10 @@
 override_dh_auto_configure:
 	mv project_path.c project_path.c.orig
 	sed 's|__FILE__|"/usr/share/deepin-terminal/dummy\"|g' project_path.c.orig | tee project_path.c
+	cmake -DCMAKE_INSTALL_PREFIX=/usr .
 
 override_dh_auto_install:
-	dh_auto_install -- PREFIX=/usr
+	dh_auto_install
 
 override_dh_clean:
 	if [ -f project_path.c.orig ];then mv project_path.c.orig project_path.c ;fi
