--- a/deepin-image-viewer/debian/control
+++ b/deepin-image-viewer/debian/control
@@ -3,7 +3,10 @@ Section: utils
 Priority: optional
 Maintainer: Deepin Packages Builder <packages@deepin.com>
 Build-Depends: debhelper (>=9), qt5-qmake, qt5-default, qtbase5-dev, pkg-config,libexif-dev, libqt5svg5-dev, libqt5x11extras5-dev, libsqlite3-dev,
- qttools5-dev-tools, libxcb-util0-dev, libstartup-notification0-dev, libraw-dev,libfreeimage-dev, libqt5opengl5-dev, qtbase5-private-dev
+ qttools5-dev-tools, libxcb-util0-dev, libstartup-notification0-dev,
+ libraw-dev,libfreeimage-dev, libqt5opengl5-dev, qtbase5-private-dev,
+ qtmultimedia5-dev, x11proto-xext-dev, libmtdev-dev, libegl1-mesa-dev,
+ libudev-dev, libfontconfig1-dev, libfreetype6-dev, libglib2.0-dev, libxrender-dev
 Standards-Version: 3.9.6
 Homepage: http://www.deepin.org
 
