--- a/deepin-installer-reborn/debian/control
+++ b/deepin-installer-reborn/debian/control
@@ -24,6 +24,7 @@ Homepage: http://www.deepin.org
 Package: deepin-installer-reborn
 Architecture: any
 Depends: ${shlibs:Depends}, ${misc:Depends}
+    udev,
     util-linux,
 Description: Reborn version of deepin installer
  New version of deepin-installer, rewritten with Qt5.
