--- a/git-build.conf
+++ b/git-build.conf
@@ -121,6 +121,7 @@ git=https://cr.deepin.io/dde/startdde
 [deepin-music]
 git=https://cr.deepin.io/deepin-music
 package_host=deepin-music
+branch=master
 
 [deepin-remote-assistance]
 package_host=deepin-remote-assistance
