--- a/git-build.conf
+++ b/git-build.conf
@@ -225,6 +225,7 @@ git=https://cr.deepin.io/dde/dde-calendar
 
 [deepin-image-viewer]
 git=https://cr.deepin.io/deepin-image-viewer
+default_branch = develop
 
 [deepin-license]
 package_host=deepin-license
