--- a/deepin-terminal/debian/rules
+++ b/deepin-terminal/debian/rules
@@ -11,5 +11,6 @@ override_dh_auto_install:
 	dh_auto_install
 
 override_dh_clean:
+	rm -fr CMakeFiles CMakeCache.txt cmake_install.cmake install_manifest.txt Makefile || true
 	if [ -f project_path.c.orig ];then mv project_path.c.orig project_path.c ;fi
 	dh_clean
