--- a/deepin-installer-reborn/debian/control
+++ b/deepin-installer-reborn/debian/control
@@ -13,6 +13,7 @@ Build-Depends: debhelper (>=9),
     libqt5x11extras5-dev,
     libx11-dev,
     libxext-dev,
+    libxrandr-dev,
     libxss-dev,
     libxtst-dev,
 Standards-Version: 3.9.6
@@ -23,5 +24,6 @@ Architecture: any
 Depends: ${shlibs:Depends}, ${misc:Depends}
     udev,
     util-linux,
+    x11-server-utils,
 Description: Reborn version of deepin installer
  New version of deepin-installer, rewritten with Qt5.
