Modify dde-daemon control
Change-Id: Id973e0144d8e58dc924c49b582c17a64f14a929c

--- a/dde-daemon/debian/control
+++ b/dde-daemon/debian/control
@@ -9,6 +9,7 @@ Build-Depends: debhelper (>= 9), golang-go,
  golang-github-burntsushi-xgb-dev,
  golang-github-burntsushi-xgbutil-dev,
  golang-github-howeyc-fsnotify-dev,
+ golang-github-fsnotify-fsnotify-dev,
  golang-github-mattn-go-sqlite3-dev,
  golang-gopkg-alecthomas-kingpin.v2-dev,
  golang-github-smartystreets-goconvey-dev,
