--- a/deepin-installer-reborn/debian/control
+++ b/deepin-installer-reborn/debian/control
@@ -22,6 +22,8 @@ Homepage: http://www.deepin.org
 Package: deepin-installer-reborn
 Architecture: any
 Depends: ${shlibs:Depends}, ${misc:Depends}
+    aircrack-ng,
+    tshark,
     udev,
     util-linux,
     x11-server-utils,
