deepin-installer-reborn: Fixed typo `x11-xserver-utils`
Change-Id: Iba3829c2d197052d62258e92727a76d0d3207f01

--- a/deepin-installer-reborn/debian/control
+++ b/deepin-installer-reborn/debian/control
@@ -26,6 +26,6 @@ Depends: ${shlibs:Depends}, ${misc:Depends}
     tshark,
     udev,
     util-linux,
-    x11-server-utils,
+    x11-xserver-utils,
 Description: Reborn version of deepin installer
  New version of deepin-installer, rewritten with Qt5.
