--- a/deepin-feedback/debian/control
+++ b/deepin-feedback/debian/control
@@ -6,13 +6,9 @@ Build-Depends: debhelper (>= 9),
  golang,
  golang-dlib-dev,
  dde-go-dbus-factory(>= 0.6.1),
- qt5-qmake,
  pkg-config,
  libx11-dev,
  libxtst-dev,
- qt5-default,
- qtdeclarative5-dev,
- libqt5webkit5-dev,
  deepin-gettext-tools,
  libgtk2.0-dev
 Standards-Version: 3.9.5
@@ -20,7 +16,7 @@ Standards-Version: 3.9.5
 Package: deepin-feedback
 Architecture: any
 Depends: ${shlibs:Depends}, ${misc:Depends},
- dde-qml-dbus-factory, qml-module-qtquick-dialogs, rfkill, lshw,
- wireless-tools, gzip, efibootmgr, deepin-qml-widgets, dmidecode,
+ rfkill, lshw,
+ wireless-tools, gzip, efibootmgr, dmidecode,
  boot-info-script, jq
 Description: report crash information to deepin for debugging
