--- a/git-build.conf
+++ b/git-build.conf
@@ -247,3 +247,6 @@ git=https://cr.deepin.io/qt5dxcb-plugin
 
 [dde-qt-dbus-factory]
 git=https://cr.deepin.io/dde/dde-qt-dbus-factory
+
+[qt5integration]
+git=https://cr.deepin.io/qt5integration
