--- a/deepin-installer-reborn/debian/control
+++ b/deepin-installer-reborn/debian/control
@@ -3,7 +3,7 @@ Section: utils
 Priority: extra
 Maintainer: Deepin Packages Builder <packages@deepin.com>
 Build-Depends: debhelper (>=9),
-    cmake (>3.1),
+    cmake (>=3.1),
     g++,
     qt5-qmake,
     qt5-default,
