--- a/git-build.conf
+++ b/git-build.conf
@@ -250,3 +250,6 @@ git=https://cr.deepin.io/dde/dde-qt-dbus-factory
 
 [qt5integration]
 git=https://cr.deepin.io/qt5integration
+
+[deepin-cogl]
+git=https://cr.deepin.io/deepin-cogl
