--- a/git-build.conf
+++ b/git-build.conf
@@ -251,6 +251,9 @@ git=https://cr.deepin.io/dde/dde-qt-dbus-factory
 [qt5integration]
 git=https://cr.deepin.io/qt5integration
 
-[deepin-cogl]
+[cogl]
 git=https://cr.deepin.io/deepin-cogl
 branch=cogl-1.22
+
+[qt5deepintheme-plugin]
+git=https://cr.deepin.io/qt5deepintheme-plugin
