--- a/git-build.conf
+++ b/git-build.conf
@@ -219,6 +219,7 @@ private=True
 [dde-file-manager]
 git=https://cr.deepin.io/dde/dde-file-manager
 package_host=dde-file-manager
+branch=develop2.0
 
 [dde-calendar]
 git=https://cr.deepin.io/dde/dde-calendar
