--- a/deepin-feedback/debian/control
+++ b/deepin-feedback/debian/control
@@ -7,6 +7,16 @@ Build-Depends: debhelper (>= 9),
  golang-dlib-dev,
  dde-go-dbus-factory(>= 0.6.1),
  pkg-config,
+ qt5-qmake,
+ qt5-default,
+ libqt5qml5,
+ libqt5quick5,
+ libqt5widgets5,
+ libqt5gui5,
+ libqt5dbus5,
+ libqt5network5,
+ qtdeclarative5-dev,
+ pkg-config,
  libx11-dev,
  libxtst-dev,
  deepin-gettext-tools,
