--- a/deepin-feedback/debian/rules
+++ b/deepin-feedback/debian/rules
@@ -1,5 +1,9 @@
 #!/usr/bin/make -f
 
+DPKG_EXPORT_BUILDFLAGS = 1
+include /usr/share/dpkg/default.mk
+
+export QT_SELECT = qt5
 export GOPATH := /usr/share/gocode
 
 %:
