change build dde-desktop develop
Change-Id: I676cb55ae540f0324134d077440c477f3ca569d0

--- a/git-build.conf
+++ b/git-build.conf
@@ -162,6 +162,7 @@ git=https://cr.deepin.io/dde/libdui
 
 [dde-desktop]
 git=https://cr.deepin.io/dde/dde-desktop
+branch=develop
 
 [dde-dock]
 git=https://cr.deepin.io/dde/dde-dock
