--- a/git-build.conf
+++ b/git-build.conf
@@ -162,7 +162,7 @@ git=https://cr.deepin.io/dde/libdui
 
 [dde-desktop]
 git=https://cr.deepin.io/dde/dde-desktop
-branch=develop
+branch=master
 
 [dde-dock]
 git=https://cr.deepin.io/dde/dde-dock
