--- a/git-build.conf
+++ b/git-build.conf
@@ -66,6 +66,7 @@ private=True
 [deepin-wm]
 package_host=dde
 git=ssh://jenkins@cr.deepin.io:29418/deepin-wm
+branch=v2.0
 
 [deepin-menu]
 package_host=dde
@@ -155,7 +156,7 @@ git=https://cr.deepin.io/deepin-desktop-schemas
 
 [deepin-metacity]
 git=https://cr.deepin.io/deepin-metacity
-version=3.17.20
+branch=v2.0
 
 [libdui]
 git=https://cr.deepin.io/dde/libdui
