modify deepin-wm build ppa
Change-Id: Ia50ee2f596823c0eef786f8d91818b3f6cde348a

--- a/git-build.conf
+++ b/git-build.conf
@@ -64,7 +64,7 @@ branch=qtcef
 private=True
 
 [deepin-wm]
-package_host=dde
+package_host=deepin-wm-v2.0
 git=ssh://jenkins@cr.deepin.io:29418/deepin-wm
 branch=v2.0
 
@@ -155,6 +155,7 @@ git=https://cr.deepin.io/deepin-social-sharing
 git=https://cr.deepin.io/deepin-desktop-schemas
 
 [deepin-metacity]
+package_host=deepin-wm-v2.0
 git=https://cr.deepin.io/deepin-metacity
 branch=v2.0
 
