--- a/git-build.conf
+++ b/git-build.conf
@@ -259,3 +259,6 @@ branch=cogl-1.22
 
 [qt5deepintheme-plugin]
 git=https://cr.deepin.io/qt5deepintheme-plugin
+
+[dtksettings]
+git=https://cr.deepin.io/dtksettings
