Build music on 15.4.1
Change-Id: I645952aae8c62fd3e3bd2ff79e7f25b9371811e2

--- a/git-build.conf
+++ b/git-build.conf
@@ -121,7 +121,7 @@ git=https://cr.deepin.io/dde/startdde
 [deepin-music]
 git=https://cr.deepin.io/deepin-music
 package_host=deepin-music
-branch=master
+branch=15.4.1
 
 [deepin-remote-assistance]
 package_host=deepin-remote-assistance
